--- a/src/component.scss
+++ b/src/component.scss
@@ -1,3 +1,4 @@
+@import "~optimat-vue-assets/assets/css/reset.css";
 @import "~optimat-vue-assets/assets/scss/base.scss";
 
 .ui-selector-page-layout {
